--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,11 @@
 /* Base Application Styles */
 html,body {
-  background: #222;
+  background: #333;
   width:100%;
   height: 100%;
   padding:0;
   margin:0;
+  overflow:hidden;
 }
 .stage{
   width:100%;
@@ -32,6 +33,7 @@ html,body {
   transform-style:preserve-3d ;
   transform-origin: 0 50% 0;
 
+
 }
 .singlePhoto img{
   width:260px;
@@ -44,6 +46,7 @@ html,body {
 .backside{
  transform:rotateY(180deg);
  background: white;
+  backface-visibility:hidden;
   position:absolute;
   left:0;
   top:0;
@@ -52,12 +55,43 @@ html,body {
   box-sizing: border-box;
   padding:40px;
 }
-/*.controller{
+.controller{
   position:absolute;
-  left:0px;
+  left:0;
   bottom:30px;
-  z-index:100;
+  z-index:101;
   width:100%;
   text-align:center;
-}*/
+  perspective: 1800px;
+}
+.controller-unit{
+  display:inline-block;
+  width:20px;
+  height:20px;
+  margin:0 8px;
+  text-align:center;
+  cursor:pointer;
+  background:rgba(100,100,100,0.6);
+  border-radius:50%;
+  vertical-align: middle;
+  transition: all 1s ease;
+  transform-style:preserve-3d ;
+  transform: scale(1);
+}
+
+.is-center{
+  color:white;
+  transform: scale(1.5);
+
+}
+.is-center::after{
+  font-size:16px;
+  content:">";
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.is-inverse{
+  transform:scale(1.5) rotateY(180deg);
+}
+
 
